feat: added disclaimer for delegation of terms acceptance
